--- a/mywebsite/templates/base.html
+++ b/mywebsite/templates/base.html
@@ -1,48 +1,60 @@
 
 <!doctype html>
+  {% load staticfiles %}
 
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
-
-    <title>Carousel Template for Bootstrap</title>
+    <title>Dcreso Creative Solutions</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Font Awesome -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+
 
 
     <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
-    
+
+    <link href="{% static '/basestyle.css' %}" rel="stylesheet">
+
   </head>
   <body>
-    {% load staticfiles %}
-
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <img src="{% static 'main.png'%}" width=70px height= 50px/>
-            <a class="navbar-brand" href=""> Dcreso</a>
+            <a class="navbar-brand" href="{% url 'home'%}"> Dcreso</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Services</a>
+
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav ml-auto">
+                  <div class= "button">
+                    <a class="nav-item nav-link" href="{% url 'home'%}">Home</a>
+</div>
+    <div class="dropdown">
+        <button class="dropbtn" data-toggle="collapse"data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >Services</button>
+        <div class="dropdown-content">
+          <a href="{% url 'editing' %}">Video Editing</a>
+          <a href="{% url 'audio' %}">Audio</a>
+          <a href="{% url 'design' %}">Design</a>
+          <a href="{% url 'mediaconsulting' %}">Media Consulting</a>
+        </div>
+    </div>
+
+    <div class= "button">
             <a class="nav-item nav-link" href="#">Contact</a>
           </div>
             </div>
+            </div>
+              </div>
         </nav>
+
     </header>
 {% block content%}
 {% endblock%}
