--- a/services/templates/services/home.html
+++ b/services/templates/services/home.html
@@ -13,13 +13,11 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
-
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="first-slide" src="{% static 'sydney.png' %} ">
               <div class="container">
             </div>
-
             </div>
             <div class="carousel-item">
               <img class="second-slide" src="{% static 'denhaag.png' %}">
@@ -66,91 +64,53 @@
 <br>
 <br>
 
-<div class="container">
-  <div class="row">
-        <div class= "card" class="card-columns" style="width:300px" align="center">
-          <div class="shadow-lg">
-            <div class="col-10" align="center">
-              <div> <img class="rounded-circle" src= "{% static 'videoediting.png' %}" width="113.5" height="85"/>
-                <h3> Video Editing</h3>
-                <p><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
-                <p><a class="btn btn-info btn-round" href="{% url 'editing' %}" role="button">More Info</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class= "card" class="card-columns" style="width:300px" align="center">
-              <div class="shadow-lg">
-                <div class="col-10" align="center">
-                  <div> <img class="rounded-circle" src= "{% static 'audio.png' %}" width="113.5" height="85"/>
-                      <h3> Audio</h3>
-                      <p><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
-                      <p><a class="btn btn-info btn-round" href="{% url 'audio' %}" role="button">More Info</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                <div class="row">
-                <div class= "card" class="card-columns" style="width:300px" align="center">
-                  <div class="shadow-lg">
-                    <div class="col-10" align="center">
-                      <div> <img class="rounded-circle" src= "{% static 'design.png' %}" width="113.5" height="85"/>
-                          <h3> Design</h3>
-                          <p><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
-                          <p><a class="btn btn-info btn-round" href="{% url 'design'%}" role="button">More Info</a></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                      <div class= "card" class="card-columns" style="width:300px" align="center">
-                        <div class="shadow-lg">
-                          <div class="col-10" align="center">
-                            <div> <img class="rounded-circle" src= "{% static 'media.png' %}" width="113.5" height="85"/>
-                                <h3> Media Consulting</h3>
-                                <p><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. </p>
-                                <p><a class="btn btn-info btn-round" href="{% url 'mediaconsulting'%}" role="button">More Info</a></p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+<div class = "container">
+<div class="card-deck">
 
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-<div class="container">
-
-  <p>Scroll Up and Down this page to see the parallax scrolling effect.</p>
+  <div class="shadow-lg">
+    <div class="card-body text-center" style="width:280px">
+      <div> <img class="rounded-circle" src= "{% static 'videoediting.png' %}" width="113.5" height="85"/> </div>
+      <h3> Video Editing </h3>
+      <p class="card-text" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
+      <a href="{% url 'editing'%}" class="btn btn-info" role="button">More Info</a>
+    </div>
   </div>
 
-<div class="parallax"></div>
-
-  <div style="height:1000px;background-color:red;font-size:36px">
-Scroll Up and Down this page to see the parallax scrolling effect.
-This div is just here to enable scrolling.
-Tip: Try to remove the background-attachment property to remove the scrolling effect.
+  <div class="shadow-lg">
+    <div class="card-body text-center" style="width:280px">
+      <div> <img class="rounded-circle" src= "{% static 'audio.png' %}" width="113.5" height="85"/> </div>
+      <h3> Audio </h3>
+      <p class="card-text" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
+      <a href="{% url 'audio'%}" class="btn btn-info" role="button">More Info</a>
+    </div>
   </div>
 
+  <div class="shadow-lg">
+    <div class="card-body text-center" style="width:280px">
+      <div> <img class="rounded-circle" src= "{% static 'design.png' %}" width="113.5" height="85"/> </div>
+      <h3> Design </h3>
+      <p class="card-text" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
+      <a href="{% url 'design'%}" class="btn btn-info" role="button">More Info</a>
+    </div>
+  </div>
 
+  <div class="shadow-lg">
+    <div class="card-body text-center" style="width:280px">
+      <div> <img class="rounded-circle" src= "{% static 'media.png' %}" width="113.5" height="85"/> </div>
+      <h3> Media Consulting </h3>
+      <p class="card-text" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
+      <a href="{% url 'mediaconsulting' %}" class="btn btn-info" role="button">More Info</a>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-
-
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 </body>
