--- a/mywebsite/templates/base.html
+++ b/mywebsite/templates/base.html
@@ -13,59 +13,76 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-
-
     <!-- Custom styles for this template -->
 
     <link href="{% static '/basestyle.css' %}" rel="stylesheet">
 
   </head>
+
+
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #171924;">
         <div class="container">
           <img src="{% static 'main.png'%}" width=70px height= 50px/>
-            <a class="navbar-brand" href="{% url 'home'%}"> Dcreso</a>
+            <a class="navbar-brand js-scroll-trigger" href="{% url 'home'%}"> Dcreso</a>
 
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
-                  <div class= "button">
-                    <a class="nav-item nav-link" href="{% url 'home'%}">Home</a>
-</div>
-    <div class="dropdown">
-        <button class="dropbtn" data-toggle="collapse"data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >Services</button>
-        <div class="dropdown-content">
-          <a href="{% url 'editing' %}">Video Editing</a>
-          <a href="{% url 'audio' %}">Audio</a>
-          <a href="{% url 'design' %}">Design</a>
-          <a href="{% url 'mediaconsulting' %}">Media Consulting</a>
-        </div>
-    </div>
 
-    <div class= "button">
-            <a class="nav-item nav-link" href="#">Contact</a>
+                  <div class= "dropdown">
+                    <button class="dropbtn">
+                    <a class="nav-item nav-link" href="{% url 'home'%}">Home</a></button>
+                  </div>
+
+                  <div class="dropdown">
+                    <button class="dropbtn">Services</button>
+                    <div class="dropdown-content">
+                      <a class="nav-item nav-link" href="{% url 'editing' %}">Video Editing</a>
+                      <a class="nav-item nav-link" href="{% url 'audio' %}">Audio</a>
+                      <a class="nav-item nav-link"href="{% url 'design' %}">Design</a>
+                      <a class="nav-item nav-link" href="{% url 'mediaconsulting' %}">Media Consulting</a>
+                    </div>
+                  </div>
+
+          <div class= "dropdown">
+            <button class="dropbtn">
+            <a class="nav-item nav-link" href="#">Contact</a></button>
           </div>
-            </div>
-            </div>
-              </div>
-        </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+    </nav>
 
     </header>
 {% block content%}
 {% endblock%}
 
 
+
       <!-- FOOTER -->
       <br>
-      <footer class="container" align="center">
+      <br>
+      <br>
+      <footer class="container" align="center" style="background-color:#f7f9fa;">
+        <br>
+        <br>
+        <br>
         <p>Dcreso Creative Solutions {% now "Y" %}</p>
       </footer>
+
     </main>
+
+
+
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
