--- a/mywebsite/static/basestyle.css
+++ b/mywebsite/static/basestyle.css
@@ -1,32 +1,20 @@
 p {
     font-family: "helvetica", serif;
 }
-
-.button {
-
-  display: inline-block;
-  background-color: #f7f9fa;
-  color: grey;
-  padding: 3px;
-  font-size: 16px;
-  font-family: helvetica;
-  border: none;
-  border-radius: 4px;
-
+h4 {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.button:hover {background-color: #eceded}
-
-
-
 .dropbtn {
+    display: inline-block;
+    position: relative;
     background-color: #f7f9fa;
     color: grey;
-    padding: 9px;
-    font-size: 16px;
+    padding-top: 10px;
+    font-size: 16;
     font-family: helvetica;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     }
 
 /* The container <div> - needed to position the dropdown content */
@@ -48,8 +36,8 @@ p {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    color: grey;
+    padding: 5px 10px;
     text-decoration: none;
     display: block;
     border-radius: 5px;
