paralax on homepage. colours

--- a/audio/static/audio/audiostyle.css
+++ b/audio/static/audio/audiostyle.css
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background: url('Audiobgbw.png');
+    background: url('Audiobg.png');
     /* Full height */
     height: 400px;
     /* Create the parallax scrolling effect */
