--- a/mywebsite/templates/base.html
+++ b/mywebsite/templates/base.html
@@ -69,14 +69,11 @@
 
 
       <!-- FOOTER -->
-      <br>
-      <br>
-      <br>
+    
       <footer class="container" align="center">
         <br>
-        <br>
-        <br>
-        <p>Dcreso Creative Solutions {% now "Y" %}</p>
+
+        <p><font color=#a1a1a1>Dcreso Creative Solutions {% now "Y" %}</font></p>
       </footer>
 
     </main>
