--- a/services/static/services/home.css
+++ b/services/static/services/home.css
@@ -1,4 +1,16 @@
 
+.parallax {
+    /* The image used */
+    background: url('Colourgradigbg.png');
+    /* Full height */
+    height: 400px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+
 body {
    background-image: url("backgroundhometwo.png");
    /* Full height */
@@ -10,18 +22,3 @@ body {
    background-size: cover;
 
 }
-
-.button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-.button2 {background-color: #008CBA;}
