--- a/services/templates/services/home.html
+++ b/services/templates/services/home.html
@@ -8,50 +8,12 @@
 
 <main role="main">
 <body>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="first-slide" src="{% static 'sydney.png' %} ">
-              <div class="container">
-            </div>
-            </div>
-            <div class="carousel-item">
-              <img class="second-slide" src="{% static 'denhaag.png' %}">
-              <div class="container">
-                <div class="carousel-caption text-right">
-                  <h1>SLIDE 2</h1>
-                  <p>Slide 2 text.</p>
-                  <p><a class="btn btn-lg btn-info" href="#" role="button">Learn more</a></p>
-                </div>
-              </div>
-            </div>
+  <div class="container">
+  </div>
 
-            <div class="carousel-item">
-              <img class="third-slide" src="{% static 'london.png' %}">
-              <div class="container">
-                <div class="carousel-caption text-right">
-                  <h1>SLIDE 3</h1>
-                  <p>text for slide 3.</p>
-                  <p><a class="btn btn-lg btn-info" href="#" role="button">more info</a></p>
-                  </div>
-              </div>
-            </div>
-          </div>
+  <div class="parallax"></div>
 
-          <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+  <div style="height:400px;">
 <br>
 <br>
 <br>
@@ -60,7 +22,13 @@
       <p> <font color=#a1a1a1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
       Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</font></p>
   </div>
+</div>
 
+<br>
+<br>
+<br>
+
+<div class="parallax"></div>
 <br>
 <br>
 <br>
