--- a/videoediting/static/videoediting/videostyle.css
+++ b/videoediting/static/videoediting/videostyle.css
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background: url('bwediting.png');
+    background: url('Editingbg.png');
     /* Full height */
     height: 400px;
     /* Create the parallax scrolling effect */
