--- a/videoediting/templates/videoediting/editing.html
+++ b/videoediting/templates/videoediting/editing.html
@@ -5,83 +5,84 @@
 <link href="{% static 'videoediting/videostyle.css' %}" rel="stylesheet">
 
 
-<body style="500px;background-color:#f7f9fa">
+
 
 <div class="container">
 </div>
 
 <div class="parallax"></div>
 
-<div style="height:500px;background-color:#f7f9fa;">
+<div style="height:400px;background-color:#050606;">
   <br>
   <br>
   <br>
   <div class="container" align="center">
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
-    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</p>
+    <p><font color=grey> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</font></p>
   </div>
 </div>
 
 <div class="parallax"></div>
 
-<div style="height:500px;background-color:#f7f9fa;">
+<div style="height:900px;background-color:#1d1d1e;">
   <br>
   <br>
   <br>
 
    <div class="container">
     <div class="row">
-        <div class="col-md-6 ">
-            <div class="card">
-                <div class="card-image">
+        <div class="col-md-6">
+            <div class="card" style="background-color:#1d1d1e;">
+                <div class="card-image" >
                     <div class="embed-responsive embed-responsive-16by9">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/8rcBlYCKKW8"frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div><!-- card image -->
                 <div class="card-content">
-                    <span class="card-title" align="center"><h4>The Reason Behind Me</h4></span>
+
                 </div><!-- card content -->
               </div>
 
 
 </div>
     <div class="col-md-6 ">
-        <div class="card">
+        <div class="card" style="background-color:#1d1d1e;">
             <div class="card-image">
                 <div class="embed-responsive embed-responsive-16by9">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XMLFnLkXxrs" frameborder="0" allowfullscreen></iframe>
               </div>
             </div><!-- card image -->
             <div class="card-content">
-                <span class="card-title" align="center"><h4>Consquences</h4></span>
+                <br>
             </div><!-- card content -->
           </div>
         </div>
 
 
+
+
 <div class="col-md-6 ">
-    <div class="card">
+    <div class="card" style="background-color:#1d1d1e;">
         <div class="card-image">
             <div class="embed-responsive embed-responsive-16by9">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Mlz2MvczB-w" frameborder="0" allowfullscreen></iframe>
             </div>
         </div><!-- card image -->
         <div class="card-content">
-            <span class="card-title" align="center"><h4>Lyrical</h4></span>
         </div><!-- card content -->
       </div>
     </div>
 
 
 <div class="col-md-6 ">
-    <div class="card">
+    <div class="card" style="background-color:#1d1d1e;">
         <div class="card-image">
             <div class="embed-responsive embed-responsive-16by9">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/SC1XE85BC9o" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IqEDgfKGErE" frameborder="0" allowfullscreen></iframe>
             </div>
         </div><!-- card image -->
         <div class="card-content">
-            <span class="card-title">Will my credits transfer?</span>
+          <br>
         </div><!-- card content -->
       </div>
     </div>
