--- a/mywebsite/templates/base.html
+++ b/mywebsite/templates/base.html
@@ -3,6 +3,7 @@
   {% load staticfiles %}
 
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <title>Dcreso Creative Solutions</title>
 
@@ -23,11 +24,9 @@
   <body>
     <header>
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#040403">
+    <nav class="navbar navbar-expand-lg fixed-top" style=background:'transparent'>
         <div class="container">
-          <img src="{% static 'mywebsite/mainwhite.png'%}" width=70px height= 50px/>
-            <a class="navbar-brand js-scroll-trigger" href="{% url 'home'%}">Dcreso</a>
-
+          <a class="navbar-brand js-scroll-trigger" href="{% url 'home'%}"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,13 +36,13 @@
 
                   <div class= "dropdown">
                     <button class="dropbtn">
-                    <a class="nav-item nav-link" href="{% url 'home'%}">Home</a></button>
+                      <a class="nav-item nav-link" href="{% url 'home'%}">Home</a></button>
                   </div>
 
                   <div class="dropdown">
                       <div style="padding-top:8px">
-                    <button class="dropbtn">Services</button></a>
-                    <div class="dropdown-content">
+                  <button class="dropbtn"><a>Services</a></button>
+                    <div class="dropdown-content" align="center">
                       <a class="nav-item nav-link" href="{% url 'editing' %}">Video Editing</a>
                       <a class="nav-item nav-link" href="{% url 'audio' %}">Audio</a>
                       <a class="nav-item nav-link" href="{% url 'design' %}">Design</a>
@@ -61,22 +60,20 @@
       </div>
     </div>
     </nav>
+  </body>
+</header>
 
-    </header>
+
 {% block content%}
 {% endblock%}
 
 
 
       <!-- FOOTER -->
-    
-      <footer class="container" align="center">
-        <br>
+  
 
-        <p><font color=#a1a1a1>Dcreso Creative Solutions {% now "Y" %}</font></p>
-      </footer>
 
-    </main>
+
 
 
 
@@ -97,6 +94,9 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.11/js/mdb.min.js"></script>
+
+<script src="https://unpkg.com/scrollreveal"></script>
+<script type="text/javascript"src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
 
 
