--- a/services/templates/services/home.html
+++ b/services/templates/services/home.html
@@ -5,85 +5,83 @@
 
 <link href="{% static 'services/home.css' %}" rel="stylesheet">
 
+<script src="https://unpkg.com/scrollreveal"></script>
 
 <main role="main">
+  <section id="page">
 <body>
-  <div class="container">
+<div class="container" style="padding-top: 15%">
   </div>
 
-  <div class="parallax"></div>
-
-  <div style="height:400px;">
 <br>
 <br>
 <br>
 
   <div class="container" align="center">
-      <p> <font color=#a1a1a1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+      <p> <font color=white>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
       Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</font></p>
   </div>
-</div>
 
 <br>
-<br>
-<br>
 
-<div class="parallax"></div>
-<br>
-<br>
-<br>
+<div class="container">
+<div class="card-deck" style="background-color:transparent">
+  <div>
 
-<div class="container" style="background-color:#202020">
-<div class="card-deck" >
-
-  <div >
     <div class="card-body text-center" style="width:280px">
-          <div> <img class="rounded-circle" src= "{% static 'videoediting.png' %}" width="113.5" height="85"/> </div>
+      <div> <img class="rounded-circle" src= "{% static 'services/whitevideoediting.png' %}" width="113.5" height="85"/> </div>
       <h3> <font color=#ff7c0b>Video Editing </font></h3>
-      <p class="card-text"><font color= "grey">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
-      <a href="{% url 'editing'%}" class="btn btn-outline-secondary" role="button">More Info</a>
+      <p class="card-text"><font color= "white">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
+      <a href="{% url 'editing'%}" class="btn btn-outline-info" style="border-radius: 15px" role="button">More Info</a>
     </div>
   </div>
 
   <div class="shadow">
     <div class="card-body text-center" style="width:280px">
-      <div> <img class="rounded-circle" src= "{% static 'audio.png' %}" width="113.5" height="85"/> </div>
+      <div> <img class="rounded-circle" src= "{% static 'services/whiteaudio.png' %}" width="113.5" height="85"/> </div>
       <h3><font color=#7c00ff> Audio </font></h3>
-      <p class="card-text"><font color= "grey">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
-      <a href="{% url 'audio'%}" class="btn btn-outline-secondary" role="button">More Info</a>
+      <p class="card-text"><font color= "white">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
+      <a href="{% url 'audio'%}" class="btn btn-outline-info" style="border-radius: 15px" role="button">More Info</a>
     </div>
   </div>
 
   <div class="shadow">
     <div class="card-body text-center" style="width:280px">
-      <div> <img class="rounded-circle" src= "{% static 'design.png' %}" width="113.5" height="85"/> </div>
+      <div> <img class="rounded-circle" src= "{% static 'services/whitedesign.png' %}" width="113.5" height="85"/> </div>
       <h3> <font color=#82ff00>Design </font> </h3>
-      <p class="card-text"><font color= "grey">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
-      <a href="{% url 'design'%}" class="btn btn-outline-secondary" role="button">More Info</a>
+      <p class="card-text"><font color= "white">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
+      <a href="{% url 'design'%}" class="btn btn-outline-info" style="border-radius: 15px" role="button">More Info</a>
     </div>
   </div>
 
   <div >
     <div class="card-body text-center" style="width:280px">
-      <div> <img class="rounded-circle" src= "{% static 'media.png' %}" width="113.5" height="85"/> </div>
+      <div> <img class="rounded-circle" src= "{% static 'services/whitemedia.png' %}" width="113.5" height="85"/> </div>
       <h3> <font color=#ff0096> Media Consulting </font> </h3>
-      <p class="card-text"><font color= "grey">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
-      <a href="{% url 'mediaconsulting' %}" class="btn btn-outline-secondary" role="button">More Info</a>
+      <p class="card-text"><font color= "white">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</font></p>
+      <a href="{% url 'mediaconsulting' %}" class="btn btn-outline-info" style="border-radius: 15px" role="button">More Info</a>
       </div>
     </div>
   </div>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <div class="container" style="padding-top: 8%" align="center">
+    <p><font color=white>Dcreso Creative Solutions {% now "Y" %}</font></p>
+    <br>
+    <br>
+    </div>
+
+  </body>
+
+  <script>
+    window.sr = ScrollReveal();
+    sr.reveal('.card-deck',{
+      duration: 4000,
+      origin: 'top',})
 
 
-</body>
+  </script>
 
-
+  </section>
 
 {%endblock%}
